@@ -127,15 +127,16 @@ Joomla.checkAll = function(checkbox, stub) {
 /**
  * Render messages send via JSON
  *
- * @param	object
+ * @param	object	messages	JavaScript object containing the messages to render
  * @return	void
  */
 Joomla.renderMessages = function(messages) {
+	Joomla.removeMessages();
 	var container = document.id('system-message-container');
-	var children = $$('#system-message-container > *');
-	children.destroy();
+
 	var dl = new Element('dl', {
-		id: 'system-message'
+		id: 'system-message',
+		role: 'alert'
 	});
 	Object.each(messages, function (item, type) {
 		var dt = new Element('dt', {
@@ -160,6 +161,17 @@ Joomla.renderMessages = function(messages) {
 	}, this);
 	dl.inject(container);
 };
+
+
+/**
+ * Remove messages
+ *
+ * @return	void
+ */
+Joomla.removeMessages = function() {
+	var children = $$('#system-message-container > *');
+	children.destroy();
+}
 
 /**
  * USED IN: administrator/components/com_modules/views/module/tmpl/default.php
